added more resume experience

--- a/achievements.html
+++ b/achievements.html
@@ -23,7 +23,8 @@
         <h1>Achievements</h1>
         <ul style="list-style: none;border-left: 5px solid #dce79a;">
             <li>
-                Dean's List Spring 2024            
+                <strong>Dean's List Spring 2024</strong>
+                <li>An honor awarded to those CAS students who earned at least 15 academic credits and had a semester GPA of 3.5 or higher. A notation has been made on your transcript.</li>
             </li>
         </ul>
     </div>
