--- a/employment.html
+++ b/employment.html
@@ -22,12 +22,18 @@
 
     <div class="main-content">
         <h1>Employment</h1>
-        <ul style="list-style: none;border-left: 5px solid #dce79a;">
+        <ul style="list-style: none; border-left: 5px solid #dce79a; padding-left: 10px;">
             <li>
-                Girl Scouts IT Program Management Intern</u> <em>June 2024-August 2024</em>
+                <strong>Girl Scouts IT Program Management Intern</strong> <em>June 2024 - August 2024</em>
+                <ul style="list-style: circle; padding-left: 20px;">
+                    <li>Utilized Jira and Wrike to optimize project management systems, driving innovation and streamlining operations.</li>
+                    <li>Contributed to creating maintenance schedules and templates in Confluence, enhancing organizational productivity and setting up processes for the future.</li>
+                    <li>Created a Communications Dashboard using PowerBI; a one-stop-shop for all Technology communications at GSUSA.</li>
+                    <li>Organized content and logistics for a Technology Meeting; created a game in The Training Arcade Platform and designed meeting merchandise in Canva.</li>
+                </ul>
             </li>
+
         </ul>
-        
     </div>
     
     <footer>
