--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,31 @@
             <button onclick="checkAge()">Check Age</button>
             <h3 id="output1"></h3>
         </div>
+
+        <ul style="list-style: none; border-left: 5px solid #dce79a; padding-left: 10px;">
+            <li>
+                <strong>College Kitchen Website</strong>
+                <ul style="list-style: circle; padding-left: 20px;">
+                    <li>Implemented a user interface using the React framework, utilizing CSS and JavaScript to enhance usability and aesthetics.</li>
+                    <li>Called Spoonacular API and WebSpeech API to allow users to input ingredients to generate recipes.</li>
+                    <li>Used Firebase to store user information such as saved recipes and pantry ingredients.</li>
+                </ul>
+            </li>
+        </ul>
+
+
+        <ul style="list-style: none; border-left: 5px solid #dce79a; padding-left: 10px;">
+
+            <li>
+                <strong>Portfolio Website</strong>
+                <ul style="list-style: circle; padding-left: 20px;">
+                    <li>Utilized HTML to structure the webpage, added CSS for layout arrangement and color schemes.</li>
+                    <li>Included interactive hamburger menu using JS for navigation visibility.</li>
+                </ul>
+            </li>
+        </ul>
+
+
     </div>
     
     <footer>
