--- a/achievements.html
+++ b/achievements.html
@@ -5,7 +5,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Resume</title>
 </head>
+
+
 <body>
+
+    <header class="main-header">
+        <h1>Diya Gandhi</h1>
+        <p>My Online Resume</p>
+    </header>
+    
     <div class="navbar">
         <nav>
             <ul>
