--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Resume</title>
 </head>
+
 <body>
+
+    <header class="main-header">
+        <h1>Diya Gandhi</h1>
+        <p>My Online Resume</p>
+    </header>
+
         <div class="navbar">
             <nav>
                 <ul>
@@ -20,7 +27,6 @@
         </div>
 
         <div class="main-content">
-        <h1>Diya Gandhi</h1>
 
         <img src="profile.png" alt="profile" id="profile-pic">
 
