--- a/references.html
+++ b/references.html
@@ -6,6 +6,11 @@
     <title>Resume</title>
 </head>
 <body>
+    <header class="main-header">
+        <h1>Diya Gandhi</h1>
+        <p>My Online Resume</p>
+    </header>
+
     <div class="navbar">
         <nav>
             <ul>
