left nav bar issue

--- a/education.html
+++ b/education.html
@@ -5,10 +5,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Resume</title>
 </head>
+
+<header class="main-header">
+    <h1>Diya Gandhi</h1>
+    <p>My Online Resume</p>
+</header>
+
 <body>
-    <header class="main-header">
-        <h1>Diya Gandhi</h1>
-        <p>My Online Resume</p>
+  
     </header>
 
     <div class="navbar">
