no borders for now

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
 
         <div class="main-content">
+            <h1>Home</h1>
 
         <img src="profile.png" alt="profile" id="profile-pic">
 
