fixed references table

--- a/references.html
+++ b/references.html
@@ -27,7 +27,9 @@
     <div class="main-content">
         <h1>References</h1>
         
+        <div class="table-container">
         <h4>Professional</h4>
+
         <table class="styled-table">
             <tr>
                 <th>Name</th>
@@ -48,6 +50,8 @@
                 <td><a href="mailto:aschnore@girlscouts.org">aschnore@girlscouts.org</a></td>
             </tr>
         </table>
+    </div>
+
 
         <h4>Personal</h4>
         <table class="styled-table">
